--- a/v4.0/m-var/defaults.css
+++ b/v4.0/m-var/defaults.css
@@ -387,13 +387,13 @@
     --m-text-color-theme-dim:         var(--m-text-color-theme-default);
     --m-text-color-theme-dimmer:      var(--m-text-color-theme-default);
     --m-text-color-theme-dark:        var(--m-color-whitesmoke);
-    --m-text-color-theme-dark-amber:  hsl(45deg 100% 70%);
-    --m-text-color-theme-dark-yellow: hsl(60deg 100% 80%);
+    --m-text-color-theme-dark-amber:  hsl( 45deg 100% 70%);
+    --m-text-color-theme-dark-yellow: hsl( 60deg 100% 80%);
     --m-text-color-theme-dark-green:  hsl(120deg 100% 80%);
     --m-text-color-theme-dark-blue:   hsl(240deg 100% 80%);
     --m-text-color-theme-dark-pink:   hsl(300deg 100% 80%);
     --m-text-color-theme-dark-purple: hsl(270deg 100% 85%);
-    --m-text-color-theme-dark-red:    hsl(0deg 100% 80%);
+    --m-text-color-theme-dark-red:    hsl(  0deg 100% 80%);
     --m-text-color-theme-dark-cyan:   hsl(180deg 100% 80%);
 
     /* the link color */
@@ -401,13 +401,13 @@
     --m-link-color-theme-dim:         var(--m-link-color-theme-default);
     --m-link-color-theme-dimmer:      var(--m-link-color-theme-default);
     --m-link-color-theme-dark:        hsl(180deg 100% 90%);
-    --m-link-color-theme-dark-amber:  hsl(45deg 100% 70%);
-    --m-link-color-theme-dark-yellow: hsl(60deg 100% 90%);
+    --m-link-color-theme-dark-amber:  hsl( 45deg 100% 70%);
+    --m-link-color-theme-dark-yellow: hsl( 60deg 100% 90%);
     --m-link-color-theme-dark-green:  hsl(120deg 100% 90%);
     --m-link-color-theme-dark-blue:   hsl(240deg 100% 90%);
     --m-link-color-theme-dark-pink:   hsl(300deg 100% 90%);
     --m-link-color-theme-dark-purple: hsl(270deg 100% 95%);
-    --m-link-color-theme-dark-red:    hsl(0deg 100% 90%);
+    --m-link-color-theme-dark-red:    hsl(  0deg 100% 90%);
     --m-link-color-theme-dark-cyan:   hsl(180deg 100% 90%);
 
     /* the link:hover color */
@@ -415,27 +415,27 @@
     --m-link-hover-color-theme-dim:         var(--m-link-hover-color-theme-default);
     --m-link-hover-color-theme-dimmer:      var(--m-link-hover-color-theme-default);
     --m-link-hover-color-theme-dark:        var(--m-link-hover-color-theme-default);
-    --m-link-hover-color-theme-dark-amber:  hsl(45deg 100% 70%  / 80%);
-    --m-link-hover-color-theme-dark-yellow: hsl(60deg 100% 90%  / 80%);
+    --m-link-hover-color-theme-dark-amber:  hsl( 45deg 100% 70% / 80%);
+    --m-link-hover-color-theme-dark-yellow: hsl( 60deg 100% 90% / 80%);
     --m-link-hover-color-theme-dark-green:  hsl(120deg 100% 90% / 80%);
     --m-link-hover-color-theme-dark-blue:   hsl(240deg 100% 90% / 80%);
     --m-link-hover-color-theme-dark-pink:   hsl(300deg 100% 90% / 80%);
     --m-link-hover-color-theme-dark-purple: hsl(270deg 100% 95% / 80%);
-    --m-link-hover-color-theme-dark-red:    hsl(0deg 100% 90%   / 80%);
+    --m-link-hover-color-theme-dark-red:    hsl(  0deg 100% 90% / 80%);
     --m-link-hover-color-theme-dark-cyan:   hsl(180deg 100% 90% / 80%);
 
     /* the simulated page-break line color */
     --m-page-break-simulated-color-theme-default:     hsl(0deg 0% 20% / 20%);
     --m-page-break-simulated-color-theme-dim:         var(--m-page-break-simulated-color-theme-default);
     --m-page-break-simulated-color-theme-dimmer:      var(--m-page-break-simulated-color-theme-default);
-    --m-page-break-simulated-color-theme-dark:        hsl(180deg 100% 90%);
-    --m-page-break-simulated-color-theme-dark-amber:  hsl(45deg 100% 70%  / 10%);
-    --m-page-break-simulated-color-theme-dark-yellow: hsl(60deg 100% 90%  / 10%);
+    --m-page-break-simulated-color-theme-dark:        hsl(180deg 100% 90% / 10%);
+    --m-page-break-simulated-color-theme-dark-amber:  hsl( 45deg 100% 70% / 10%);
+    --m-page-break-simulated-color-theme-dark-yellow: hsl( 60deg 100% 90% / 10%);
     --m-page-break-simulated-color-theme-dark-green:  hsl(120deg 100% 90% / 10%);
     --m-page-break-simulated-color-theme-dark-blue:   hsl(240deg 100% 90% / 10%);
     --m-page-break-simulated-color-theme-dark-pink:   hsl(300deg 100% 90% / 10%);
     --m-page-break-simulated-color-theme-dark-purple: hsl(270deg 100% 95% / 10%);
-    --m-page-break-simulated-color-theme-dark-red:    hsl(0deg 100% 90%   / 10%);
+    --m-page-break-simulated-color-theme-dark-red:    hsl(  0deg 100% 90% / 10%);
     --m-page-break-simulated-color-theme-dark-cyan:   hsl(180deg 100% 90% / 10%);
 
     /* the fuzzy virtual page from offset frame color */
